2000-09-11  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2000-09-10  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2000-08-27  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

2000-08-24  Kai Lahmann <kl@linuxfaqs.de>

	* de.po: Updated German translation

2000-08-21  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.
	
2000-08-14  Kai Lahmann <kl@linuxfaqs.de>

	* de.po: Updated German translation

2000-08-13  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.
	* POTFILES.in: added missing files.

2000-08-08 Kai Lahmann <kl@linuxfaqs.de>

	* de.po: Updated German translation

2000-08-06  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.

Sun Jul  9 19:25:47 2000  Owen Taylor  <otaylor@redhat.com>

	* fr.po: Update from Martin Quinson <mquinson@ens-lyon.fr>

2000-06-27  Yuri Syrota  <rasta@renome.rovno.ua>

	* uk.po: Added Ukrainian translation.

2000-06-08  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian translation.
	
Mon Jun  5 10:47:02 2000  Owen Taylor  <otaylor@redhat.com>

	* de.po: Added German translation from Kai Lahmann

2000-05-28  Fatih Demir	<kabalak@gmx.net>
	
	* tr.po: Added the Turkish translation.

2000-05-24  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.
	* update.sh: 1.2.5 version.
	
2000-05-14  Valek Filippov  <frob@df.ru>

	* ru.po: updated russian translation.
	* update.sh: updated.

2000-05-13  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Updated Norwegian translation.
	
2000-05-07  Kenneth Christiansen <kenneth@gnome.dk>

	* da.po: First take on MemProf

2000-05-07  Valek Filippov  <frob@df.ru>

	* ru.po: Added russian translation.

2000-05-04  Andreas Hyden  <a.hyden@cyberpoint.se>

	* sv.po: Updated Swedish translation.

2000-05-03  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Added Norwegian translation.
	