@@ -1,3 +1,8 @@
+2000-09-13  Christian Meyer  <linux@chrisime.de>
+
+	* update.pl: Added perl script from kanikus.
+	* README.tools: Added text file.
+	
 2000-09-11  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
